# templater

./: .gitignore  CHANGELOG.md  IDEA.md  README.md  RELEASING.md  TODO.md  package-lock.json  package.json  review-report.md  vite.config.js
.github/workflows/: ci.yml  release.yml
scripts/: build-sidecar-prod.mjs  csv-to-mocks.ts  csv-to-new-templates.mjs  fetch-node-binary.mjs  filter-payments-templates.mjs  make-release-manifest.mjs
scripts/lib/: csv.mjs  releasePlatform.mjs
sidecar/: context.test.ts  context.ts  index.ts  package-lock.json  package.json  prompts.ts  protocol.test.ts  protocol.ts  transport.ts  tsconfig.json
sidecar/__fixtures__/: hello.csv  hello.md  hello.txt  hello.xlsx
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  hotkey.rs  lib.rs  main.rs  sidecar.rs  store.rs  tray.rs  windows.rs  windows_snap.rs
src-tauri/src/commands/: data.rs  mod.rs  sidecar.rs  translate.rs
src-tauri/src/store/: mod.rs  models.rs  persist.rs
src/lib/: api.test.ts  api.ts  appBootstrap.ts  browse.test.ts  browse.ts  catalog.test.ts  catalog.ts  compose.test.ts  compose.ts  contextMenu.ts  devMocks.ts  domFocus.ts  dragReorder.svelte.ts  historyDiff.test.ts  historyDiff.ts  hotkeyLabels.test.ts  hotkeyLabels.ts  keyboard.ts  libOrchestration.test.ts  mergeImportedTemplates.test.ts  mergeImportedTemplates.ts  minimalGeometry.ts  mocks.example.ts  mocks.ts  pathUtils.ts  releasePlatform.test.ts  search.test.ts  search.ts  starterTemplates.ts  tags.ts  templateHistory.ts  templateIo.ts  types.ts
src/lib/api/: data.ts  index.ts  updater.ts  windows.ts
src/lib/components/: AgentSidebar.svelte  AppShell.svelte  CheatSheet.svelte  ComboBox.svelte  ConfirmDialog.svelte  ContextMenu.svelte  ContextPane.svelte  CopyButton.svelte  DialogsHost.svelte  EditorPane.svelte  FolderPicker.svelte  GroupedTemplateList.svelte  HistoryPanel.svelte  MainPanel.svelte  MemoryCapturePopover.svelte  OnboardingTour.svelte  PlaceholderFills.svelte  PopoutFrame.svelte  ResizeHandles.svelte  SaveAsModal.svelte  SettingsModal.svelte  TagPicker.svelte  TagsSidebar.svelte  TemplateBulkBar.svelte  TemplateEditPanel.svelte  TemplateForm.svelte  TemplatePreview.svelte  TemplateRow.svelte  TemplateView.svelte  TemplatesSidebar.svelte  TitleBar.svelte
src/routes/: +layout.ts  +page.svelte
(+28 files in other folders)
